# GDScript-REPL

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  Makefile  README.md  bot.py  bot_requirements.txt  client.py  config.py.example  gdserver.gd  main.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: pre-commit.yml  tests.yml
docker/: docker-compose.yaml  dockerfile
gdrepl/: __init__.py  __main__.py  client.py  commands.py  config.py  constants.py  find_godot.py  gdserver.gd  gdserverv4.gd  history.py  keybindings.py  main.py  styles.py  ui.py  websocketserver.gd
irc_bot/: bot.py  config.py.example  message_server.py  requirements.txt
repl/: client.py  find_godot.py  gdserver.gd  main.py
tests/: test_config.py  test_e2e.py  test_history.py  test_keybindings.py  test_ui.py
